# transition-notes

./: .gitignore  CMakeLists.txt  Makefile  Readme.md  category-map  dependency.relations  label-map  lcword-map  readme.md  word-map
include/mxnet-cpp/: MxNetCpp.h  executor.h  kvstore.h  metric.h  mxnet_cpp.h  op.h  op_suppl.h  symbol.h
mxnet/: data_iter.py  graph_builder.py  greedy-symbol.json  greedy_parser  structured_grpah_builder.py
mxnet/test/: log
src/: affix.h  arc_standard_transitions.cc  base.h  beam_parser_test.cc  beam_reader_ops.cc  beam_reader_ops.h  cli_main.cc  dictionary.proto  document_format.h  embedding_feature_extractor.cc  embedding_feature_extractor.h  feature.cc  feature.h  feature_extractor.cc  feature_extractor.h  feature_extractor.proto  feature_types.h  fml_parser.cc  fml_parser.h  graph_builder.py  kbest_syntax.proto  lexicon_builder.cc  options.h  parser_eval.py  parser_features.cc  parser_features.h  parser_state.cc  parser_state.h  parser_trainer.py  parser_transitions.cc  parser_transitions.h  reader_ops.cc  reader_ops.h  registry.cc  registry.h  sentence.h  sentence.proto  sentence_batch.cc  sentence_batch.h  sentence_features.cc  (+19 more)
src/feature/: embedding_feature_extractor.cc  embedding_feature_extractor.h  feature.h  feature_extractor.cc  feature_extractor.h  feature_types.h  parser_features.cc  parser_features.h  sentence_features.cc  sentence_features.h  sparse_features.h
src/fml/: fml_parser.cc  fml_parser.h
src/io/: document_format.cc  document_format.h  text_formats.h  text_reader.cc  text_reader.h
src/lexicon/: affix.h  lexicon_builder.cc  term_frequency_map.cc  term_frequency_map.h
src/model/: greedy_parser.cc  greedy_parser.h  model_predict.cc  score_matrix.h  structured_parser.cc  structured_parser.h
src/mxnet-cpp/: executor.cc  io.cc  kvstore.cc  ndarray.cc  operator.cc  optimizer.cc  symbol.cc
src/ops/: parser_ops.cc
src/parser/: arc_standard_transitions.cc  parser_state.cc  parser_state.h  parser_transitions.cc  parser_transitions.h  tagger_transitions.cc
src/utils/: registry.h  shared_store.cc  shared_store.h  task_context.cc  task_context.h  task_spec.h  utils.cc  utils.h  work_space.cc  work_space.h
tmp/: zero_out.cc  zero_out.op.h
